# DEVPN

./: .env.example  .gitignore  README.md  deployed-addresses.json  foundry.toml  package-lock.json  package.json
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/.github/workflows/: build.yml
app/scripts/: client-setup.sh  generate-traffic.sh  node-setup.sh
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: lib.rs  network.rs  node.rs  tailscale.rs  wireguard.rs
app/src/components/: PixelBlast.tsx
app/src/hooks/: useNodeEvents.ts  useWallet.ts
app/src/pages/: ClientMode.tsx  NodeMode.tsx
app/src/utils/: DeVPNEscrowSimple.abi.json  contract.ts  tauri.ts
broadcast/Deploy.s.sol/114/: run-1768543231954.json  run-1768737429412.json  run-1768739001712.json
broadcast/DeployEscrowSimple.s.sol/114/: run-latest.json
contracts/: DeVPNEscrow.sol  DeVPNNodeRegistry.sol  DeVPNStateConnector.sol
script/: Deploy.s.sol  DeployEscrowSimple.s.sol
src/: DeVPNEscrowSimple.sol  DeVPNescrow.sol  DeVPNnoderegistery.sol  DeVPNstateconnector.sol
src/interfaces/: IFlare.sol
test/: DeVPNEscrowSimple.t.sol
